small fixes (legals img-src, project-technologies text-wrap small devices)

--- a/src/app/main-content/my-projects/my-projects.scss
+++ b/src/app/main-content/my-projects/my-projects.scss
@@ -152,6 +152,8 @@ span {
 
         .technologies {
             flex-direction: row;
+            flex-wrap: wrap;
+            gap: calc(0.625rem - clamp(0.25rem, 0.4464rem + -0.3571vw, 0.375rem));
 
             div {
                 gap: unset;
